Mon Aug 24 09:25:00 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/AMI_CCM/AMI/AMI_exec.h:
        * connectors/AMI_CCM/AMI/AMI_exec.cpp:
        * connectors/AMI_CCM/AMI/AMI_internal_i.cpp:
        * connectors/AMI_CCM/AMI/AMI_perform_work.cpp:
          CORBA callback in seperate thread. Refactored to
          one reply handler per request.

        * connectors/AMI_CCM/Sender/Hello_Sender_exec.cpp:
          Optimized logging. Removed sleep between calls.
          Wait 5 sec. (in stead of 10) before start.

        * connectors/AMI_CCM/descriptors/run_test.pl:
          Minor changes.

Mon Aug 24 07:34:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/AMI_CCM/AMI/AMI_exec.h:
        * connectors/AMI_CCM/AMI/AMI_exec.cpp:
          Implemented a define to switch between implementations.
          Resolved some compiler warnings.

Mon Aug 24 07:10:16 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/AMI_CCM/AMI/AMI.mpc:
        * connectors/AMI_CCM/AMI/AMI_exec.h:
        * connectors/AMI_CCM/AMI/AMI_exec.cpp:
        * connectors/AMI_CCM/AMI/AMI_internal_i.h:
        * connectors/AMI_CCM/AMI/AMI_internal_i.cpp:
        * connectors/AMI_CCM/AMI/AMI_perform_work.h:
        * connectors/AMI_CCM/AMI/AMI_perform_work.cpp:
        * connectors/AMI_CCM/AMI/AMI_server.h:
        * connectors/AMI_CCM/AMI/AMI_server.cpp:
          First step to use CORBA AMI in the AMI component.

        * connectors/AMI_CCM/Sender/Hello_Sender_exec.h:
        * connectors/AMI_CCM/Sender/Hello_Sender_exec.cpp:
          Minor changes.

Thu Aug 20 09:56:11 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors:
        * connectors/AMI_CCM:
        * connectors/AMI_CCM/AMI:
        * connectors/AMI_CCM/AMI/AMI.idl:
        * connectors/AMI_CCM/AMI/AMI.mpc:
        * connectors/AMI_CCM/AMI/AMI_exec.h:
        * connectors/AMI_CCM/AMI/AMI_exec.cpp:
        * connectors/AMI_CCM/Hello_Base: